--- a/fronteend/src/components/Nav.css
+++ b/fronteend/src/components/Nav.css
@@ -48,7 +48,7 @@ nav {
   display: flex;
   align-items: center; /* Align icon and text */
   padding: 10px;
-  background-color: rgb(243, 234, 234);/* No background by default */
+  background-color: rgb(19, 18, 18);/* No background by default */
   border: none;
   border-radius: 5px;
   
@@ -65,9 +65,12 @@ nav {
   margin-right: 5px; 
   color: #100f10;
    text-decoration-color: #e2e6ea;
+ /*  margin-bottom: 25px; */
 /* Spacing between icon and text */
 }/* General Styles for Navigation */
 .Home {
+  margin-top: 25px;
+  margin-bottom: 25px;
   background-color: black;
   padding: 5px;
   cursor: pointer;
@@ -82,23 +85,10 @@ nav {
 .Home i{
   color: orange;
 }
-.selectcartela{
-  background-color: black;
-  padding: 5px;
-  cursor: pointer;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1.8rem;
-  color: black;
-  margin-right: 30px;
-  margin-left: 50px;
-}
-.selectcartela i{
-  color: orangered;
-}
+
 .history{
   background-color: black;
+  margin-bottom: 25px;
   padding: 5px;
   cursor: pointer;
   background: transparent;
@@ -114,6 +104,7 @@ nav {
 }
 .wallet{
   background-color: black;
+  margin-bottom: 25px;
   padding: 5px;
   cursor: pointer;
   background: transparent;
@@ -222,9 +213,79 @@ background: linear-gradient(to bottom,  #006e2e 44%,#006e2e 100%); /* W3C, IE10+
       }
        
 @media only screen and (max-width:1024px){
+
+  .Home {
+  margin-top: 75px;
+  margin-bottom: 25px;
+  background-color: black;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.8rem;
+  color: black;
+  margin-left: 50px;
+  margin-right: 30px;
+}
+.history{
+  background-color: black;
+  margin-bottom: 25px;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.8rem;
+  color: black;
+  margin-right: 30px; 
+  margin-left: 50px;
+}
+.wallet{
+  background-color: black;
+  margin-bottom: 25px;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.8rem;
+  color: black;
+  margin-right: 30px; 
+  margin-left: 50px;
+}
+.help{
+  background-color: black;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.8rem;
+  color: black;
+  margin-right: 30px;
+  margin-left: 50px; 
+}
+  .wallet i{
+    color: #6fb74b;
+    display: none;
+  }
+  .help i{
+    color: #f70808ca;
+    display: none;
+    } 
+    .history i{
+      color: brown;
+      display: none;
+    }
+    .Home i{
+      color: orange;
+      display: none;
+    }
 .nav-btn1 {
         visibility: visible;
         opacity: 1;
+        background-color: #070707;
        
       }
      .responsive_nav {
@@ -304,9 +365,9 @@ background: linear-gradient(to bottom,  #006e2e 44%,#006e2e 100%); /* W3C, IE10+
         height: 100%;
         width: 50%;
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
+        align-items:center;
+        justify-content: start;
         
         gap: 1.5rem;
         background-color: #eee;
@@ -337,7 +398,7 @@ background: linear-gradient(to bottom,  #006e2e 44%,#006e2e 100%); /* W3C, IE10+
         font-size: 1.5rem;
       }
       .nav-help-btn i, .nav-help-btn svg {
-        font-size: 24px;  /* Size of the icon */
+        font-size: 12px;  /* Size of the icon */
         color: #007bff;   /* Customize the color to match your theme */
         margin-right: 5px; /* Spacing between the icon and text, if needed */
       }
@@ -353,7 +414,7 @@ background: linear-gradient(to bottom,  #006e2e 44%,#006e2e 100%); /* W3C, IE10+
       }
       
       .nav-help-btn:hover {
-        background-color: #e2e6ea; /* Change background on hover */
+        background-color: #3c7cbc; /* Change background on hover */
       }
  
    .nav-history-btn i, .nav-history-btn svg {
