--- a/fronteend/src/components/CartelaSelction.css
+++ b/fronteend/src/components/CartelaSelction.css
@@ -29,7 +29,7 @@
     height: 50vh;
     width: 100%;
 }
-.pecentoption{
+.percentoption{
     margin-top: 50Px;
     margin-left: 10px;
     margin-right: 50px;
