--- a/fronteend/src/components/BingoBoard.css
+++ b/fronteend/src/components/BingoBoard.css
@@ -1,7 +1,7 @@
 .mainbody{
     display: grid;
-    background-color: rgba(79, 98, 130, 0.974);
-    height: 90vh;
+    background-color: rgba(4, 17, 58, 0.974);
+    height: 100vh;
     width: 100%;
 }
 .callednums{
@@ -35,6 +35,7 @@
     margin-left: 20px;
     margin-right: 0px;
     margin-bottom: 10px;
+    margin-top: 2px;
     color: #fff;
 }
 .selected-time2{
@@ -77,8 +78,8 @@
    margin-right: 0px;
    
     font-size: large;
-    width: 6vw; /* Outer circle size */
-    height: 6vw; /* Outer circle size */
+    width: 10vw; /* Outer circle size */
+    height: 10vw; /* Outer circle size */
     background: rgb(12, 12, 12);
  /*  background-color: linear-gradient(90deg, rgb(234, 20, 95) 0%, rgba(28, 121, 9, 0.502) 43%, rgba(0,212,255,1) 100%);
  background-color:
@@ -263,6 +264,7 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-left: 25px;
+    margin-bottom: 1px;
     justify-content: space-between;
 }
 .bingoboard2 p{
@@ -537,36 +539,41 @@
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Light text shadow for effect */
 }
 .playboard{
-    background-color: rgba(79, 98, 130, 0.974);
+    background-color: rgba(0, 0, 0, 0);
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-columns: 20% 40% 20%;
+    grid-template-columns: 30% 50% 20%;
     height: 20vh;
 }
 .comandboards{
     margin-left: 20px;
+    margin-right: 20px;
+
     display: grid;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(2,1fr);
+    background-color: rgba(4, 17, 58, 0.974);
 }
 
 .start_button{
-    background-color: rgb(95, 11, 213);
+    background-color: rgb(228, 223, 235);
     
     width: 70%;
-   margin-left: 70px;
+   margin-left: 2px;
    margin-top: 2px;
+   margin-right: 0px;
    height: 45px;
+   
    margin-bottom: 2px;
    border-radius: 25px;
-   color: white;
+   color: rgb(8, 8, 8);
    font-size: large;
    
 }
 .puse_button{
-    background-color: rgb(52, 21, 190);
+    background-color: rgb(236, 234, 245);
     
     width: 70%;
-   margin-left: 70px;
+   margin-left: 10px;
    margin-top: 2px;
    height: 45px;
    margin-bottom: 2px;
@@ -575,21 +582,30 @@
    font-size: large; 
 }
 .claim_button{
-    background-color: rgb(238, 131, 31);
+    background-color: rgb(240, 238, 236);
     
     width: 70%;
    margin-left: 70px;
    margin-top: 2px;
+   margin-top: 10px;
    height: 45px;
    margin-bottom: 2px;
    border-radius: 25px;
+   margin-left: 10px;
    color: rgb(14, 14, 14);
+
    font-size: large;
 }
+.chekinput{
+    height: 35px;
+    margin-top: 10px; 
+    margin-left: 10px; 
+    
+}
 .Next_button{
-    background-color: rgb(18, 245, 222);
+    background-color: rgb(244, 246, 246);
     width: 70%;
-    margin-left: 70px;
+    margin-left: 2px;
     margin-top: 2px;
     height: 45px;
     margin-bottom: 2px;
@@ -609,14 +625,15 @@
     font-size: large;
 }
 .Leav_button{
-    background-color: rgb(158, 11, 65);
+    background-color: rgb(238, 234, 235);
     width: 70%;
-    margin-left: 70px;
+    margin-left: 10px;
+    margin-right: 0px;
     margin-top: 2px;
     height: 45px;
     margin-bottom: 2px;
     border-radius: 25px;
-    color: white;
+    color: rgb(9, 9, 9);
     font-size: large;
 }
 .dropdown {
@@ -625,13 +642,15 @@
     font-family: Arial, sans-serif;
     margin-left: 50px;
     margin-right: 50px;
-    margin-top: 20px;
+    margin-top: 2px;
 }
-dropdown-container {
-    width: 200px;
+.dropdown-container {
+    width: 50%;
+    margin-top: 2px;
     margin: 20px auto;
     font-family: Arial, sans-serif;
     text-align: center;
+    justify-content: center;
     position: relative;
 }
 
@@ -640,6 +659,7 @@ dropdown-container {
     width: 100%;
     padding: 10px;
     font-size: 16px;
+    margin-top: 2px;
     cursor: pointer;
     border: 2px solid #007bff;
     border-radius: 5px;
@@ -675,13 +695,14 @@ dropdown-container {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     background-color: white;
     position: absolute;
-    width: 30%;
+    margin-top: 2px;
+    width: 100%;
     z-index: 100;
 }
 
 /* Dropdown Item */
 .dropdown-item {
-    width: 25%;
+    width: 100%;
     padding: 10px;
     text-align: left;
     font-size: 14px;
@@ -852,7 +873,9 @@ flex-direction: row;
         opacity: 1;
     }
 }
-
+.B{
+    background-color: #000;
+}
 /* Base style for scattered items */
 .scatter {
     position: absolute;
