--- a/fronteend/src/components/BingoBoard.css
+++ b/fronteend/src/components/BingoBoard.css
@@ -615,6 +615,17 @@
     color: black;
     font-size: large;
 }
+.Next_button1{
+    background-color: rgb(121, 27, 74);
+    width: 70%;
+    margin-left: 90px;
+    margin-top: 2px;
+    height: 45px;
+    margin-bottom: 2px;
+    border-radius: 25px;
+    color: rgb(236, 231, 231);
+    font-size: large;
+}
 .Next_shuffle{
     background-color: #ffcc00;
     width: 70%;
